[package]
name = "luna"
version = "0.1.0"
authors = ["Philipp Oppermann <dev@phil-opp.com>"]
edition = "2018"

[dependencies]
bootloader = { version = "0.8.0", features = ["map_physical_memory", "vga_320x200"]}
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.8.1"
uart_16550 = "0.2.0"
pic8259_simple = "0.1.1"
pc-keyboard = "0.3.1"
linked_list_allocator = "0.6.4"
lazy_format = "1.7.4"
font8x8 = { version = "0.2.5", default-features = false, features =["unicode"]}

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
